--- a/ghp/assets/css/styles.css
+++ b/ghp/assets/css/styles.css
@@ -1,7 +1,7 @@
 /* arafatm.com */
 html  { background-color: darkgrey; }
 header  {}
-body  { font: 14px "fira sans", sans-serif; max-width: 60rem; background-color: white; margin: 0rem auto; padding: 0 0.5rem; border: 2px solid silver; }
+body  { font: 14px "fira sans", sans-serif; max-width: 60rem; background-color: white; margin: 0rem auto; padding: 0 0.5rem; border: 2px solid silver; line-height: 1.4rem; }
 footer  { display: flex; justify-content: space-between; margin: 1rem; padding: 0.5rem 3rem; text-align: center;}
 
 nav ul  { list-style: none; margin: 0; padding: 0; display: flex; flex-wrap: wrap; /*! background-color: maroon; */}
@@ -20,17 +20,17 @@ h1+ul  { display: inline; padding: 0; }
 h1+ul > li  { display: inline; padding: 0 1rem; }
 h1::after  { content: ''; flex: 1; margin-left: 0.5rem; height: 0.1rem; background-color: #000; }
 h1::before { content: ''; flex: 1; margin-right: 0.5rem; height: 0.1rem; background-color: #000; }
-h2  { text-transform: capitalize; display: flex; align-items: center; padding-top: 0.5rem; border-bottom: 5px solid black; }
+h2  { text-transform: capitalize; display: flex; align-items: center; padding-top: 0.5rem; border-bottom: 0.2rem  solid black; }
 h2::after  { content: ''; flex: 1; margin-left: 1rem; height: 0.1rem; background-color: #000; }
-h2::before { content: 'H2. '; padding-right: 0.5rem; }
-h3  { border-bottom: 4px solid black; padding-top: 0.5rem;}
-h3::before { content: 'H3. '; padding-right: 0.5rem;} 
-h4  { border-bottom: 3px solid black; padding-top: 0.5rem;}
-h4::before { content: 'H4. '; padding-right: 0.5rem;}
-h5  { border-bottom: 3px solid black; padding-top: 0.5rem;}
-h5::before { content: 'H5. '; padding-right: 0.5rem;}
-h6  { border-bottom: 3px solid black; padding-top: 0.5rem;}
-h6::before { content: 'H6. '; padding-right: 0.5rem;}
+h2::before { padding-right: 0.5rem; }
+h3  { border-bottom: 0.2rem double black; padding-top: 0.5rem;}
+h3::before { padding-right: 0.5rem;} 
+h4  { border-bottom: 0.1rem  dashed black; padding-top: 0.5rem;}
+h4::before { padding-right: 0.5rem;}
+h5  { border-bottom: 0.1rem dotted black; padding-top: 0.5rem;}
+h5::before { padding-right: 0.5rem;}
+h6  { border-bottom: 0; padding-top: 0.5rem;}
+h6::before { padding-right: 0.5rem;}
 
 a  {text-decoration: none; color: blue; }
 a:not([href])  { color: purple; }
@@ -38,16 +38,15 @@ a>img  {border: 2px solid blue;}
 blockquote  { border-left: 0.5rem solid maroon; margin: 0.5rem; padding: 0.5rem 0.5rem; background-color: lavender; }
 blockquote p  { margin: 0; padding: 0;}
 code  {  color: lavender; background-color: #272822; padding: 0.1rem 1rem; border-radius: 1rem; }
-details  {  color: lavender; background-color: #272822; padding: 0.1rem 1rem; border-radius: 1rem; }
+details {  color: lavender; background-color: #272822; padding: 0.1rem 1rem; border-radius: 1rem; }
 em  { background-color: limegreen; padding: 0.1rem 0.3rem; font-style: normal; }
 img  { margin: 0; padding: 0.5rem; max-height: 20rem; max-width: 100%; }
-img.emoji, img.ico  { width: 1.2rem; height: 1.2rem; padding: 0; }
+img.emoji, img.ico  { vertical-align: middle; width: 1.3rem; height: 1.3rem; padding: 0; background-color: salmon; border-radius: 1rem; border: 0;}
 input.task-list-item-checkbox  { margin-right: 0.5rem}
-li  { line-height: 1.4; }
 li ul { margin: 0; }
 p  { margin: 1rem;}
-pre  { padding: 1rem; }
-pre>code  {padding: 0;}
+pre { padding: 0 1rem; }
+pre.highlight code { padding: 0; }
 section  { padding: 0.5rem 0 1rem 0; /*! border-bottom: 1px solid black; */}
 section.header  { margin-bottom: 1rem; padding: 0.5rem; border: 1px solid black; border-radius: 1rem;}
 strong  { background-color: pink; padding: 0.1rem 0.3rem;  font-weight: normal; }
